# simply-plural-to-any-updater

./: .gitignore  .taurignore  Cargo.toml  Dockerfile  GEMINI.md  README.md  build-binaries.sh  cargo-build.sh  defaults.env  defaults.v2.env  dev.pwsh.Dockerfile  dev.pwsh.docker-compose.yml  dev.pwsh.vrcupdater.run.sh  dev.server.run.sh  dev.sp2any.run.sh  dev.vrcupdater.run.sh  docker-compose.yml  format.sh  generate-changelog.sh  main.rs  restart-services.sh  sample.env  server.Dockerfile  server.docker-compose.yml  server.run.sh  start-vrcupdater.ps1  stop-services.sh  tauri-build.sh  tauri-dev.sh  tauri.conf.json  test.sh  updater.run.sh  vrcupdater.sample.env
.cargo/: config.toml
.github/workflows/: release.yml  test.yaml  update-dependencies.yml
.sqlx/: query-0be51242a19fdcea681d40f0541bc5c5dbf578fc65b4648f70f61ba0b1c766b4.json  query-1b47647bf983fa2b05f1ba16033606740811a456af41d8f85a4aca65f4162306.json  query-3a0fc7df238931b93226843f5f020f3405bb5d12a140ff793980d7d66eaedd18.json  query-70083de9d160e894de5bac5b0a239ca5052900d8dc3e07ffadd13ed9d62e48f4.json  query-d117f40aa89004a4603c600ab467005e9b187afe2b69e288fedfec9c6b96f754.json  query-d4e69722cb52ff1da9bd0b43736c705f743bf48641c55e247d93e1bf43eb3a69.json  query-fd29e5539c03b1d874e9f0805b24bdee2062f7bb6e14d0344a45f507d02843e8.json
db/: init.sql
dev/: codebase-size.sh  server.run.sh  sp2any.run.sh  tauri-build.sh  tauri-dev.sh  updater.run.sh  vrcupdater.run.sh
docker/: .gitignore  local.compose.yml  local.start.sh  local.stop.sh  source.sh  sp2any.Dockerfile  start-test-db-and-refresh-sqlx-prepare.sh  stop-test-db.sh
frontend/: env.d.ts  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.vue  router.ts
icons/: icon.icns
release/: cargo-build.sh  ci-install-dependencies.sh  lint.sh  release-build.sh  update-dependencies.sh
release/config/: example.json  server.defaults.env
sp2any_macros/: Cargo.toml
sp2any_macros/src/: lib.rs
src/: api.rs  app.rs  auth.rs  base.rs  config.rs  config_file.rs  config_store.rs  database.rs  database_constraints.rs  db.rs  db_constraints.rs  discord.rs  fronting_status.rs  gui.rs  http.rs  jwt.rs  macros.rs  main.rs  model.rs  setup.rs  simply_plural.rs  updater.rs  updater_loop.rs  updater_manager.rs  updater_state.rs  vrchat.rs  vrchat_auth.rs  vrchat_status.rs  webserver.rs  webview.rs
src-tauri/: tauri.conf.json
src/database/: constraints.rs  mod.rs  queries.rs  secrets.rs
src/users/: jwt.rs  (+7 more)
test/: .gitignore  plural_system_to_test.sh  source.sh  startup.integration-tests.sh  unit-tests.sh  updater.integration-tests.sh  vrchatupdater.integration-tests.sh  vrcupdater.integration-tests.sh  webserver.integration-tests.sh
(+15 files in other folders)
