[package]
name = "sp2any"
version = "0.1.0"
edition = "2021"
rust-version = "1.87.0"

[[bin]]
name = "sp2any"
path = "src/main.rs"

[dependencies]
sp2any_macros = { path = "sp2any_macros" }
chrono = { version = "0.4", features = ["serde"]}
rocket = { version = "0.5", features = ["json"] }
anyhow = "1"
dotenvy = "0.15"
vrchatapi = "1"
encoding_rs = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
html-escape = "0.2"
log = "0.4"
clap = { version = "4", features = [ "derive"] }
directories = "6"
strum_macros = "0.27"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"]}
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
rand = "0.9.2"
serde_with = "3.14.0"
sha2 = "0.10"

[build-dependencies]
