[package]
name = "sp2any"
version = "0.1.0"
edition = "2021"
rust-version = "1.87.0"

[[bin]]
name = "sp2any"
path = "src/main.rs"

[dependencies]
sp2any_macros = { path = "sp2any_macros" }
chrono = { version = "0.4", features = ["serde"] }
either = "1.15"
anyhow = "1"
dotenvy = "0.15"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vrchatapi = "1"
html-escape = "0.2"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
log = "0.4"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "macros",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
] }
strum_macros = "0.27"
argon2 = "0.5"
jsonwebtoken = "9.3"
rand = "0.9"
sha2 = "0.10"
rocket = { version = "0.5", features = ["json"] }

[build-dependencies]
